force-app/main/default/objects/Case_Agents_Assignment__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>