force-app/main/default/objects/Case_Agents_Assignment__c/fields/Agent_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_SF_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>