force-app/main/default/objects/Case_Agents_Assignment__c/fields/Out_of_Office__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Office</label>
    <type>Checkbox</type>
</CustomField>