force-app/main/default/objects/Case_Agents_Assignment__c/fields/Tier_Group__c.field-meta.xml
<CustomField>
    <fullName>Tier_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tier Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>